[gd_scene load_steps=15 format=3 uid="uid://b4tothkjcil2f"]

[ext_resource type="Script" path="res://scenes/ui/menus/main_menu/main_menu.gd" id="1_ct0pc"]
[ext_resource type="PackedScene" uid="uid://rij5bvmvffnm" path="res://scenes/ui/components/app_button.tscn" id="2_a5s15"]
[ext_resource type="PackedScene" uid="uid://5p624wsr7m2d" path="res://scenes/ui/menus/settings_menu.tscn" id="2_movie"]
[ext_resource type="PackedScene" uid="uid://cqd01tgnwtfhh" path="res://scenes/main/main.tscn" id="3_5sin2"]
[ext_resource type="AudioStream" uid="uid://lviwjb7tg0s3" path="res://assets/audio/music/menu.ogg" id="4_qd6dr"]
[ext_resource type="Texture2D" uid="uid://bivyy0intsl8x" path="res://scenes/ui/menus/main_menu/main_menu.png" id="7_j3bhj"]
[ext_resource type="Script" path="res://scenes/ui/menus/main_menu/menu_background.gd" id="7_lv2uk"]

[sub_resource type="AudioStreamPlaylist" id="AudioStreamPlaylist_b2ryu"]
fade_time = 1.0
stream_count = 1
stream_0 = ExtResource("4_qd6dr")

[sub_resource type="AtlasTexture" id="AtlasTexture_j8bes"]
atlas = ExtResource("7_j3bhj")
region = Rect2(2560, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6rji"]
atlas = ExtResource("7_j3bhj")
region = Rect2(0, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii5qn"]
atlas = ExtResource("7_j3bhj")
region = Rect2(640, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_17d7n"]
atlas = ExtResource("7_j3bhj")
region = Rect2(1280, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qw88"]
atlas = ExtResource("7_j3bhj")
region = Rect2(1920, 0, 640, 360)

[sub_resource type="SpriteFrames" id="SpriteFrames_mor7a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6rji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii5qn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17d7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qw88")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_j8bes")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_ct0pc")
settings_scene = ExtResource("2_movie")
main_scene = ExtResource("3_5sin2")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamPlaylist_b2ryu")
autoplay = true
bus = &"Music"

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_j8bes")
script = ExtResource("7_lv2uk")
sprite_frames = SubResource("SpriteFrames_mor7a")

[node name="Timer" type="Timer" parent="TextureRect"]
one_shot = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/margin_right = 100

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"WUTitleStatPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 10
text = "R.I.T.K.A. Rampage"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_a5s15")]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="SettingsButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_a5s15")]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_a5s15")]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"
